--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <img src="./img/hamburger.png" alt="menu-bar" />
             </div>
           </div>
-          <div class="logo-container">
+          <div onclick="redirectToHomePage()" class="logo-container">
             <img src="./img/YouTube_Logo.png" alt="Youtube Logo" />
           </div>
         </div>
@@ -227,7 +227,7 @@
               </div>
             </div>
     
-            <div class="content-card">
+            <!-- <div class="content-card">
               <div class="video-thumbnail">
                 <img src="https://i.ytimg.com/vi/KYuj9hffF20/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBSaeQdnKa7fFZXFtqta9VTjWEAPA" alt="Ustaad bagath singh" />
               </div>
@@ -470,7 +470,7 @@
 
            
 
-            </div>
+            </div> -->
 
           </div>
         </div>
