--- a/video-page.html
+++ b/video-page.html
@@ -26,7 +26,7 @@
               <img src="./img/hamburger.png" alt="menu-bar" />
             </div>
           </div>
-          <div class="logo-container">
+          <div onclick="redirectToHomePage()" class="logo-container">
             <img src="./img/YouTube_Logo.png" alt="Youtube Logo" />
           </div>
         </div>
@@ -311,5 +311,8 @@
         </div>
       </div>
     </div>
+
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
